# guild-toolkit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  guild-workspace-structure.md  index.md
.design/: guild-workspace-structure.md  guild-workspace-structure.pipeline.json
crates/guild-core/: Cargo.toml  README.md
crates/guild-core/src/: config.rs  crosslink.rs  data.rs  error.rs  lib.rs  output.rs
crates/guild-deps/: Cargo.toml  README.md
crates/guild-deps/src/: main.rs
crates/guild-portfolio/: Cargo.toml  README.md
crates/guild-portfolio/src/: main.rs
crates/guild-progress/: Cargo.toml  README.md
crates/guild-progress/src/: main.rs
crates/guild-review/: Cargo.toml  README.md
crates/guild-review/src/: main.rs
crates/guild-roast/: Cargo.toml  README.md
crates/guild-roast/src/: main.rs
crates/guild-scaffold/: Cargo.toml  README.md
crates/guild-scaffold/src/: main.rs
crates/guild-search/: Cargo.toml  README.md
crates/guild-search/src/: main.rs
crates/guild-stats/: Cargo.toml  README.md
crates/guild-stats/src/: main.rs
issues/b517f175-a445-494d-8919-c2cf02ac5aa3/: issue.json
issues/b5f1b075-038c-4108-9eba-45571e3b33b7/: issue.json
issues/bb5f5438-a27c-4b01-8c3f-fe932ccaa355/: issue.json
issues/c1b24acc-6c76-4317-9d4f-9e5c167a0fc8/: issue.json
