[package]
name = "guild-review"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Submit a project for adversarial review, pull down feedback, track review rounds"

[[bin]]
name = "guild-review"
path = "src/main.rs"

[dependencies]
guild-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
